<resources>
    <string name="app_name">Chat App</string>
    <string name="image">image</string>
    <string name="credit">Developed By X Neutral</string>
    <string name="login">Login</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_username">Enter UserName</string>
    <string name="enter_pass">Enter Password</string>
    <string name="click_to_register">Click to Register</string>
    <string name="click_to_login">Click to Login</string>
    <string name="register">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="me_user"><b> (Me)</b></string>
    <string name="available_users">Available Users :</string>
    <string name="message">Message</string>
    <string name="you"><b>You :</b></string>
    <string name="available_groups">Available Groups :</string>
    <string name="no_group">No Group Exist. Create a New one</string>
    <string name="create_new_group">Create New Group</string>
</resources>