<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"
            android:fontFamily="@font/ibm_plex_sans"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_userName"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_marginHorizontal="@dimen/_48sdp"
            android:layout_marginVertical="@dimen/_12sdp"
            android:hint="@string/enter_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_email"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_marginHorizontal="@dimen/_48sdp"
            android:layout_marginVertical="@dimen/_12sdp"
            android:hint="@string/enter_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_password"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_marginHorizontal="@dimen/_48sdp"
            android:layout_marginVertical="@dimen/_12sdp"
            android:hint="@string/enter_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:inputType="text"
                android:imeOptions="actionDone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/register_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            />

        <Button
            android:id="@+id/register_btn"
            android:layout_marginHorizontal="@dimen/_32sdp"
            android:layout_marginVertical="@dimen/_12sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="@dimen/_14ssp"
            />


        <TextView
            android:id="@+id/login_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click_to_login"
            android:fontFamily="@font/ibm_plex_sans"
            android:textSize="@dimen/_11ssp"
            />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>